--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "build": "webpack",
+        "serve": "live-server public/",
+        "build:dev": "webpack",
+        "build:prod": "webpack -p --env production",
         "dev-server": "webpack-dev-server",
         "test": "jest --config=jest.config.json"
     },
@@ -20,7 +22,9 @@
         "enzyme": "3.0.0",
         "enzyme-adapter-react-16": "1.0.0",
         "enzyme-to-json": "3.0.1",
+        "extract-text-webpack-plugin": "3.0.0",
         "jest": "20.0.4",
+        "live-server": "^1.2.0",
         "moment": "2.18.1",
         "node-sass": "4.5.3",
         "normalize.css": "7.0.0",
